scrollable landing page, fixed categories for products, readability fixes

--- a/src/components/general/tabs.scss
+++ b/src/components/general/tabs.scss
@@ -1,4 +1,7 @@
-.tabs{
+.tabs.col.s12.m10{
+    position: fixed;
+    z-index: 1;
+    left:0;
     .tab a:focus, .tab a:focus.active {
         background-color: transparent;
         outline: none;
